...
        <scene sceneID="YXa-1K-WCY">
            <objects>
                <navigationController storyboardIdentifier="NavigationController" title="Navigation Controller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="G8J-cz-rcJ" customClass="NavigationController" customModule="CheckedItems" customModuleProvider="target" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9w6-Xf-5lc">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item's name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FaR-oV-968" customClass="CheckedItemsTextField" customModule="CheckedItems" customModuleProvider="t
                                        <rect key="frame" x="17" y="209" width="238" height="30"/>
                                        <nil key="textColor"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Boxes" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1TI-BG-asZ" customClass="CheckedItemsTextField" customModule="CheckedItems" customModuleProvider="target"
                                        <rect key="frame" x="279" y="209" width="79" height="30"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Daily amount" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DhE-HU-4Hp" customClass="CheckedItemsTextField" customModule="CheckedItems" customModuleProvider="
                                        <rect key="frame" x="17" y="294" width="341" height="30"/>
                                        <nil key="textColor"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Daily amount:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nTJ-Yh-UT3">
                                        <rect key="frame" x="17" y="257" width="104.5" height="29"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount at the begining:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CnL-OS-Pth">
                                        <rect key="frame" x="17" y="342" width="183.5" height="29"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                        <state key="normal" title="Save">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        </connections>
                                    </button>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Start date of consuming" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zmr-Ql-OQe" customClass="CheckedItemsTextField" customModule="CheckedItems" customModul
                                        <rect key="frame" x="17" y="464" width="341" height="30"/>
                                        <nil key="textColor"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera" translatesAutoresizingMaskIntoConstraints="NO" id="1vm-Bu-eVP">
                                        <rect key="frame" x="17" y="28" width="341" height="136"/>
                                    </imageView>
...
