...
    }
    
    override func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath) -> [UITableViewRowAction]? {
        guard let item = fetchedResultsController.object(at: indexPath) as? CheckedItems else {
            fatalError("There are no object at \(indexPath) in the database")
        }
        let deleteRowAction = UITableViewRowAction(style: .default, title: "Delete", handler: {_, _ in
            CheckedItemsViewModel.deleteItem(item)
        })
        let addRowAction = UITableViewRowAction(style: .normal, title: "Extend item", handler: {_, _ in
            self.showExtendItemScreen(for: item)
        })
        return [deleteRowAction, addRowAction]
    }
    
    // MARK: Action methods
...
