...
            .last
        
        guard theSameItem != nil else { return }
        
        let viewAlert = UIAlertController(title: theSameItem!.itemName, message: "The item is already added.\nDo you want to add the new item to it?", preferredStyle: .actionSheet)
        
        viewAlert.addAction(UIAlertAction(title: "Yes", style: .default, handler: { _ in
            self.addToItem(theSameItem!)
        }))
        
        viewAlert.addAction(UIAlertAction(title: "No", style: .default, handler: { _ in
            self.saveItem()
        }))
...
